--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "stylelint-config-standard": "^16.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
