--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.16.0",
     "classnames": "^2.2.5",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-modal": "^1.7.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5",
